--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "gh-pages": "^6.1.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.6.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.1",
     "save-dev": "0.0.1-security",
@@ -43,7 +43,7 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^5.2.0",
-    "@babel/plugin-proposal-private-property-in-object": "^7.16.0"
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.0",
+    "react-router-dom": "^5.2.0"
   }
 }
